src/pages/Post/Post.scss
.Post {
  border-radius: 10px;
  margin: 2em;
  padding: 2em;
  border: 1px solid #282C34;

  .action-buttons {
    display: flex;
    justify-content: flex-end;
    margin-bottom: 15px;
    gap: 1em;
  }

  header {
    border: 1px solid #ECEFF1;
    .post-image {
      display: flex;
      align-items: center;
      object-fit: contain;

        h1 {
          width: 100%;
          text-align: center;
          background-color: #ECEFF1;
        }
    }

    .meta {
      flex-wrap: wrap;
      padding: 0.2em 1em;
      background-color: #ECEFF1;
      display: flex;
      justify-content: space-evenly;
      align-items: center;

      .post-date {
        color: black;
      }

      .post-author {
        color: black;
        font-size: 1.2em;

        a {
          color: #1876D1;
          cursor: pointer;
        }

        em {
            color: black;
        }
      }

      .post-tags {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        gap: 1em;
        margin-top: 1em;
        margin-bottom: 1em;
        justify-content: center;
      }
    }
  }

  .post-content {
    font-family: 'Arial', serif;

    h1 {
      color: #1876D1;
    }

    h2, p, div {
      color: black;
    }
  }
}

